--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
-RewriteEngine on
+RewriteEngine On
+RewriteBase /HACKATON/
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /index.php
+RewriteRule ^ index.php [QSA,L]
